--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,7 +35,7 @@ en:
       one: status
       other: statuses
     status_count_before: Who authored
-    tagline: Follow friends and discover new ones
+    tagline: fast, witty, verbal sparring. not a safe space
     terms: Terms of service
     unavailable_content: Moderated servers
     unavailable_content_description:
